--- a/Orientation/Base.lproj/Main.storyboard
+++ b/Orientation/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,14 +19,14 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jdv-zE-YyG" userLabel="Logo Stack View">
-                                <rect key="frame" x="0.0" y="20" width="145" height="647"/>
+                                <rect key="frame" x="0.0" y="20" width="167" height="355"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sts_logo_original" translatesAutoresizingMaskIntoConstraints="NO" id="pbI-j0-l4o">
-                                        <rect key="frame" x="0.0" y="0.0" width="145" height="647"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="167" height="355"/>
                                         <color key="backgroundColor" red="0.39673914249999997" green="0.76142314089999996" blue="0.9919000268" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                 </subviews>
@@ -43,25 +44,79 @@
                                     </mask>
                                 </variation>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="GUC-LC-x5I" userLabel="Right Stack View">
+                                <rect key="frame" x="166" y="20" width="498" height="354"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dqK-Y2-tha" userLabel="Top Stack View">
+                                        <rect key="frame" x="0.0" y="0.0" width="498" height="177"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPX-hL-L8e">
+                                                <rect key="frame" x="0.0" y="0.0" width="249" height="177"/>
+                                                <state key="normal" backgroundImage="cat"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hGG-Do-rOU">
+                                                <rect key="frame" x="249" y="0.0" width="249" height="177"/>
+                                                <state key="normal" backgroundImage="director"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="I4q-Ex-gcy" userLabel="Bottom Stack View">
+                                        <rect key="frame" x="0.0" y="177" width="498" height="177"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ih0-aL-S8c">
+                                                <rect key="frame" x="0.0" y="0.0" width="498" height="177"/>
+                                                <color key="backgroundColor" red="0.99942404029999998" green="0.91960832579999996" blue="0.14047787640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" backgroundImage="cello_player"/>
+                                            </button>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fEc-0m-Iws">
+                                                <rect key="frame" x="0.0" y="177" width="498" height="0.0"/>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="twg-P5-rPJ">
+                                                <rect key="frame" x="0.0" y="177" width="498" height="0.0"/>
+                                            </imageView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="Ih0-aL-S8c" secondAttribute="bottom" id="8ia-Fo-Xa3"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ih0-aL-S8c" secondAttribute="trailing" id="GYV-eA-6c5"/>
+                                            <constraint firstItem="Ih0-aL-S8c" firstAttribute="leading" secondItem="I4q-Ex-gcy" secondAttribute="leading" id="HzU-7g-5FX"/>
+                                            <constraint firstItem="Ih0-aL-S8c" firstAttribute="top" secondItem="I4q-Ex-gcy" secondAttribute="top" id="ZkJ-Gg-gKh"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="GUC-LC-x5I" firstAttribute="top" secondItem="jdv-zE-YyG" secondAttribute="top" id="9va-B1-7zs"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="jdv-zE-YyG" secondAttribute="bottom" id="COu-aW-F48"/>
                             <constraint firstItem="jdv-zE-YyG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EEy-8U-vxI"/>
                             <constraint firstItem="jdv-zE-YyG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IUb-ib-nVq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GUC-LC-x5I" secondAttribute="trailing" constant="-17" id="IyX-dU-LyZ"/>
+                            <constraint firstItem="GUC-LC-x5I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="142" id="KRE-z9-a0T"/>
                             <constraint firstAttribute="trailing" secondItem="jdv-zE-YyG" secondAttribute="trailing" constant="500" id="W8e-pj-VB1"/>
+                            <constraint firstItem="GUC-LC-x5I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="166" id="jq9-dY-YSd"/>
+                            <constraint firstItem="GUC-LC-x5I" firstAttribute="centerY" secondItem="jdv-zE-YyG" secondAttribute="centerY" id="xgW-zX-x3m"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="jq9-dY-YSd"/>
+                            </mask>
+                        </variation>
                         <variation key="heightClass=compact-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="jdv-zE-YyG"/>
+                                <include reference="GUC-LC-x5I"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="W8e-pj-VB1"/>
+                                <exclude reference="KRE-z9-a0T"/>
+                                <include reference="jq9-dY-YSd"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="jdv-zE-YyG"/>
+                                <include reference="GUC-LC-x5I"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="W8e-pj-VB1"/>
@@ -71,10 +126,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="134.48275862068968"/>
+            <point key="canvasLocation" x="131.78410794602701" y="133.59999999999999"/>
         </scene>
     </scenes>
     <resources>
+        <image name="cat" width="90" height="60"/>
+        <image name="cello_player" width="90" height="60"/>
+        <image name="director" width="90" height="60"/>
         <image name="sts_logo_original" width="99" height="191"/>
     </resources>
 </document>
